modifications according to F.0 version

--- a/safety_home/safety_home.service.server/pom.xml
+++ b/safety_home/safety_home.service.server/pom.xml
@@ -37,6 +37,7 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.safety</artifactId>
+			<version>3.0.0</version>
 		</dependency>		
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
