--- a/safety_home/safety_home.service.client/pom.xml
+++ b/safety_home/safety_home.service.client/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.safety</artifactId>
-			<version>2.0.3-SNAPSHOT</version>
+			<version>3.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
