--- a/safety_home/safety_home.service.windowProvider/pom.xml
+++ b/safety_home/safety_home.service.windowProvider/pom.xml
@@ -32,12 +32,11 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.safety</artifactId>
-			<version>2.0.3-SNAPSHOT</version>
+			<version>3.0.0</version>
 		</dependency>		
 		<dependency>
 			<groupId>org.universAAL.remote</groupId>
 			<artifactId>ri.internetgateway</artifactId>
-			<version>2.0.3-SNAPSHOT</version>
 		</dependency>				
 	</dependencies>
     <build>
