--- a/new_services.pom/pom.xml
+++ b/new_services.pom/pom.xml
@@ -86,7 +86,7 @@
 			<dependency>
 				<groupId>org.universAAL.ontology.services</groupId>
 				<artifactId>ont.pom</artifactId>
-				<version>2.0.4-SNAPSHOT</version>
+				<version>3.0.0</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
