--- a/agenda/agenda.runner/pom.xml
+++ b/agenda/agenda.runner/pom.xml
@@ -21,27 +21,27 @@
 
 
 
-						<provision>scan-composite:mvn:org.universAAL.middleware/mw.composite/2.0.4-SNAPSHOT/composite</provision>
-						<provision>scan-composite:mvn:org.universAAL.ontology/ont.composite/2.0.4-SNAPSHOT/composite</provision>
+						<provision>scan-composite:mvn:org.universAAL.middleware/mw.composite/3.0.0/composite</provision>
+						<provision>scan-composite:mvn:org.universAAL.ontology/ont.composite/3.0.0/composite</provision>
 						<provision>scan-composite:mvn:org.universAAL.context/ctxt.che/2.0.5-SNAPSHOT/composite</provision>
 
-						<provision>scan-composite:mvn:org.universAAL.context/ctxt.prof.server/2.0.4-SNAPSHOT/composite</provision>
+						<provision>scan-composite:mvn:org.universAAL.context/ctxt.prof.server/3.0.0/composite</provision>
 						<provision>scan-composite:mvn:org.universAAL.security/security.authenticator.userPassword.client/2.0.4-SNAPSHOT/composite</provision>
 						 
 						 <provision>wrap:mvn:javax.servlet/servlet-api/2.5</provision>
-						<provision>scan-composite:mvn:org.universAAL.remote/ri.servicegateway/2.0.4-SNAPSHOT/composite</provision>
+						<provision>scan-composite:mvn:org.universAAL.remote/ri.servicegateway/3.0.0/composite</provision>
 
 
 						<!-- UIFW -->
-						<provision>scan-composite:mvn:org.universAAL.ui/ui.dm/2.0.4-SNAPSHOT/composite</provision>
-						<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web.html/2.0.4-SNAPSHOT/composite</provision>
+						<provision>scan-composite:mvn:org.universAAL.ui/ui.dm/3.0.0/composite</provision>
+						<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web.html/3.0.0/composite</provision>
 						<!-- fragments like ui.handler.gui.swing.bluesteelLAF cannot be started 
 							so leaving them in resolved state is enough -->
-						<!-- <provision>wrap:mvn:org.universAAL.ui/ui.handler.gui.swing.bluesteelLAF/2.0.4-SNAPSHOT@nostart</provision> -->
-						<!-- <provision>mvn:org.universAAL.ui/ui.handler.gui.swing/2.0.4-SNAPSHOT@nostart</provision> -->
+						<!-- <provision>wrap:mvn:org.universAAL.ui/ui.handler.gui.swing.bluesteelLAF/3.0.0@nostart</provision> -->
+						<!-- <provision>mvn:org.universAAL.ui/ui.handler.gui.swing/3.0.0@nostart</provision> -->
 
 
-						<provision>scan-composite:mvn:org.universAAL.AALapplication/agenda.composite/E.4/composite</provision>
+						<provision>scan-composite:mvn:org.universAAL.AALapplication/agenda.composite/F.0/composite</provision>
 
 
 					</provision>
