--- a/agenda/agenda.gui/pom.xml
+++ b/agenda/agenda.gui/pom.xml
@@ -1,33 +1,31 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>agenda.pom</artifactId>
 		<version>F.0</version>
 		<relativePath>../agenda.pom/pom.xml</relativePath>
 	</parent>
-	
+
 	<artifactId>agenda.gui</artifactId>
 	<packaging>bundle</packaging>
 	<name>Agenda AAL Service GUI</name>
-	
-	<properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-</properties>
+
+<!-- 	<properties> -->
+<!-- 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> -->
+<!-- 	</properties> -->
 
 	<dependencies>
 		<dependency>
-			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.profile</artifactId>
-		</dependency>
-		<!--		<dependency>-->
-		<!--			<groupId>junit</groupId>-->
-		<!--			<artifactId>junit</artifactId>-->
-		<!--		</dependency>-->
-		<dependency>
 			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.profile</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
@@ -80,33 +78,38 @@
 							org.universAAL.agenda.gui.impl,
 							org.universAAL.agenda.gui.components,
 							org.universAAL.agenda.gui.osgi</Private-Package>
-<!--						<Import-Package>-->
-<!--							org.universAAL.middleware.rdf,-->
-<!--							org.universAAL.middleware.owl,-->
-<!--							org.universAAL.middleware.rdf.impl,-->
-<!--							org.universAAL.middleware.util,-->
-<!--							org.universAAL.middleware.container,-->
-<!--							org.universAAL.middleware.container.osgi,-->
-<!--							org.universAAL.middleware.container.utils,-->
-<!--							org.universAAL.middleware.context,-->
-<!--							org.universAAL.middleware.service.owl,-->
-<!--							org.universAAL.middleware.service.owls.profile,-->
-<!--							org.universAAL.middleware.service,-->
-<!--							org.universAAL.agenda.client,-->
-<!--							org.universAAL.agenda.client.osgi,-->
-<!--							org.universAAL.ontology.profile,-->
-<!--							org.universAAL.ontology.agenda,-->
-<!--							org.universAAL.ontology.agendaEventSelection,-->
-<!--							org.universAAL.agendaEventSelectionTool.client,-->
-<!--							org.universAAL.ontology.agenda.service,-->
-<!--							org.universAAL.ontology.location.address,-->
-<!--							javax.xml.datatype,-->
-<!--							javax.swing,-->
-<!--							org.osgi.framework,-->
-<!--							*</Import-Package>-->
+						<!-- <Import-Package> -->
+						<!-- org.universAAL.middleware.rdf, -->
+						<!-- org.universAAL.middleware.owl, -->
+						<!-- org.universAAL.middleware.rdf.impl, -->
+						<!-- org.universAAL.middleware.util, -->
+						<!-- org.universAAL.middleware.container, -->
+						<!-- org.universAAL.middleware.container.osgi, -->
+						<!-- org.universAAL.middleware.container.utils, -->
+						<!-- org.universAAL.middleware.context, -->
+						<!-- org.universAAL.middleware.service.owl, -->
+						<!-- org.universAAL.middleware.service.owls.profile, -->
+						<!-- org.universAAL.middleware.service, -->
+						<!-- org.universAAL.agenda.client, -->
+						<!-- org.universAAL.agenda.client.osgi, -->
+						<!-- org.universAAL.ontology.profile, -->
+						<!-- org.universAAL.ontology.agenda, -->
+						<!-- org.universAAL.ontology.agendaEventSelection, -->
+						<!-- org.universAAL.agendaEventSelectionTool.client, -->
+						<!-- org.universAAL.ontology.agenda.service, -->
+						<!-- org.universAAL.ontology.location.address, -->
+						<!-- javax.xml.datatype, -->
+						<!-- javax.swing, -->
+						<!-- org.osgi.framework, -->
+						<!-- *</Import-Package> -->
 					</instructions>
 				</configuration>
 			</plugin>
-		<plugin><groupId>org.apache.karaf.tooling</groupId><artifactId>features-maven-plugin</artifactId><version>2.3.1</version></plugin></plugins>
+			<plugin>
+				<groupId>org.apache.karaf.tooling</groupId>
+				<artifactId>features-maven-plugin</artifactId>
+				<version>2.3.1</version>
+			</plugin>
+		</plugins>
 	</build>
 </project>
