--- a/aal_eficiency/AALfficiency.test/pom.xml
+++ b/aal_eficiency/AALfficiency.test/pom.xml
@@ -1,41 +1,38 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<artifactId>new_services.pom</artifactId>
+		<artifactId>AAlfficiency.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>B.0</version>
+		<version>F.0</version>
+		<relativePath>../AAlfficiency.pom/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
  	<groupId>org.universAAL.AALapplication</groupId>
   	<artifactId>AALfficiency.test</artifactId>
-  	<version>0.1.0-SNAPSHOT</version>
+  	<version>F.0</version>
  	<description>AALfficiency test</description>
 	<packaging>bundle</packaging>
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.felix</groupId>
+			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.data.representation</artifactId>
+			<artifactId>mw.data.representation.osgi</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.service</artifactId>
+			<artifactId>mw.bus.service.osgi</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.io</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.context</artifactId>
+			<artifactId>mw.bus.context.osgi</artifactId>
 		</dependency>
 		<dependency>
 		    <groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.aalfficiencyscores</artifactId>
-			<version>1.2.1-SNAPSHOT</version>
+			<version>3.0.0</version>
 		</dependency>
 	</dependencies>
 	<build>
