--- a/aal_eficiency/AALfficiencyService/pom.xml
+++ b/aal_eficiency/AALfficiencyService/pom.xml
@@ -1,21 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   
-  <parent>
-		<artifactId>new_services.pom</artifactId>
+	<parent>
+		<artifactId>AAlfficiency.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>E.1</version>
-		<relativePath>../../new_services.pom/pom.xml</relativePath> 
+		<version>F.0</version>
+		<relativePath>../AAlfficiency.pom/pom.xml</relativePath>
 	</parent>
   
   <artifactId>AALfficiencyService</artifactId>
   <name>uAAL AALfficiency Service</name>
-  <version>E.0.1-SNAPSHOT</version>
+  <version>F.0</version>
   <description/>
 	<packaging>bundle</packaging>
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.felix</groupId>
+			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.core</artifactId>
 		</dependency>
 		<dependency>
