--- a/nutritional/nutritional.client/pom.xml
+++ b/nutritional/nutritional.client/pom.xml
@@ -147,7 +147,7 @@
 				<artifactId>features-maven-plugin</artifactId>
 				<version>2.3.1</version>
 			</plugin>
-		<plugin><groupId>org.apache.karaf.tooling</groupId><artifactId>features-maven-plugin</artifactId><version>2.3.1</version></plugin></plugins>
+        </plugins>
 	</build>
 
 </project>
