--- a/personal_safety/personal_safety.run/pom.xml
+++ b/personal_safety/personal_safety.run/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>personal_safety.pom</artifactId>
-		<version>D.0.1-SNAPSHOT</version>
+		<version>F.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
