--- a/food_shopping/food_shopping.service.client/pom.xml
+++ b/food_shopping/food_shopping.service.client/pom.xml
@@ -25,14 +25,17 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.shopping</artifactId>
+			<version>3.0.0</version>
 		</dependency>		
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.nutrition</artifactId>
+			<version>3.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.profile</artifactId>
+			<version>3.0.0</version>
 		</dependency>
 	</dependencies>
     <build>
