--- a/food_shopping/shopping.karaf.feature/pom.xml
+++ b/food_shopping/shopping.karaf.feature/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <artifactId>shopping.karaf.feature</artifactId>
   <groupId>org.universAAL.AALapplication</groupId>
-  <version>F.0</version>
+  <version>3.0.0</version>
   <name>Food and Shopping AAL Service Karaf Feature</name>
   <properties>
     <commons-beanutils-version>1.8.3</commons-beanutils-version>
