--- a/food_shopping/shopping.pom/pom.xml
+++ b/food_shopping/shopping.pom/pom.xml
@@ -56,7 +56,7 @@
 			<dependency>
 				<groupId>org.universAAL.AALapplications</groupId>
 				<artifactId>shopping.karaf.feature</artifactId>
-				<version>2.0.4-SNAPSHOT</version>
+				<version>3.0.0</version>
 			</dependency>
 			
 		</dependencies>
