--- a/help_when_out/hwo.karaf.feature/pom.xml
+++ b/help_when_out/hwo.karaf.feature/pom.xml
@@ -8,10 +8,11 @@
 		<version>F.0</version>
 		<relativePath>../hwo.pom/pom.xml</relativePath>
 	</parent>
+	
 	<artifactId>hwo.karaf.feature</artifactId>
 	<name>Help When Outdoor Service Karaf Feature</name>
 	<description>Artifact representing representing the Karaf feature for the Help When Outdoor AAL Service</description>
-    <version>F.0</version>
+    <version>3.0.0</version>
   <build>
    <plugins>
       <plugin>
