--- a/medication/medication.manager.integration.tests/pom.xml
+++ b/medication/medication.manager.integration.tests/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
-    <version>B.0.1-SNAPSHOT</version>
+    <version>F.0</version>
     <artifactId>medication.manager.pom</artifactId>
     <relativePath>../medication.manager.pom</relativePath>
   </parent>
@@ -16,15 +16,9 @@
   <dependencies>
 
     <dependency>
-      <groupId>org.universAAL.ontology</groupId>
-      <artifactId>medication.manager.ont</artifactId>
-      <version>1.1.1-SNAPSHOT</version>
-    </dependency>
-
-    <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.missing.services.simulation</artifactId>
-      <version>B.0.1-SNAPSHOT</version>
+      <version>F.0</version>
     </dependency>
 
   </dependencies>
@@ -56,5 +50,38 @@
         </configuration>
       </plugin>
     </plugins>
+    <pluginManagement>
+    	<plugins>
+    		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+    		<plugin>
+    			<groupId>org.eclipse.m2e</groupId>
+    			<artifactId>lifecycle-mapping</artifactId>
+    			<version>1.0.0</version>
+    			<configuration>
+    				<lifecycleMappingMetadata>
+    					<pluginExecutions>
+    						<pluginExecution>
+    							<pluginExecutionFilter>
+    								<groupId>org.apache.felix</groupId>
+    								<artifactId>
+    									maven-bundle-plugin
+    								</artifactId>
+    								<versionRange>
+    									[2.3.6,)
+    								</versionRange>
+    								<goals>
+    									<goal>manifest</goal>
+    								</goals>
+    							</pluginExecutionFilter>
+    							<action>
+    								<ignore></ignore>
+    							</action>
+    						</pluginExecution>
+    					</pluginExecutions>
+    				</lifecycleMappingMetadata>
+    			</configuration>
+    		</plugin>
+    	</plugins>
+    </pluginManagement>
   </build>
 </project>
