--- a/ontologies/ont.pom/karaf.feature/pom.xml
+++ b/ontologies/ont.pom/karaf.feature/pom.xml
@@ -5,12 +5,12 @@
   <parent>
 	  <groupId>org.universAAL.ontology.services</groupId>
 	  <artifactId>ont.pom</artifactId>
-	  <version>2.0.4-SNAPSHOT</version>
+	  <version>3.0.0</version>
     	<relativePath>../pom.xml</relativePath>
   </parent>
   <groupId>org.universAAL.ontology</groupId>
   <artifactId>ontS.karaf.feature</artifactId>
-  <version>2.0.4-SNAPSHOT</version>
+  <version>3.0.0</version>
   <name>universAAL Karaf Feature Ontologies</name>
   <properties>
     <commons-beanutils-version>1.8.3</commons-beanutils-version>
@@ -47,7 +47,6 @@
 				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>ont.shopping</artifactId>
 			</dependency>
-			<!--
 			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>ont.message</artifactId>
@@ -79,7 +78,7 @@
 			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>ont.safety</artifactId>
-			</dependency>-->
+			</dependency>
 		</dependencies>
 
   <build>
