--- a/ZWaveInterface/ZWaveDataPublisher/pom.xml
+++ b/ZWaveInterface/ZWaveDataPublisher/pom.xml
@@ -4,7 +4,7 @@
   <parent>
 		<artifactId>new_services.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>E.4</version>
+		<version>F.0</version>
 		<relativePath>../../new_services.pom/pom.xml</relativePath>
 	</parent>
   
@@ -40,6 +40,7 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.activityhub</artifactId>
+			<version>3.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.xsocket</groupId>
