--- a/nutritional/nutritional.pom/pom.xml
+++ b/nutritional/nutritional.pom/pom.xml
@@ -21,7 +21,7 @@
 			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>ont.pom</artifactId>
-				<version>2.0.4-SNAPSHOT</version>
+				<version>3.0.0</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
