--- a/help_when_out/hwo.servlet/pom.xml
+++ b/help_when_out/hwo.servlet/pom.xml
@@ -3,13 +3,13 @@
 		<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>hwo.pom</artifactId>
-		<version>F.0</version>
+		<version>G.0</version>
 		<relativePath>../hwo.pom</relativePath>
 	</parent>
 
 	<packaging>bundle</packaging>
 	<artifactId>hwo.servlet</artifactId>
-	<version>F.0</version>
+	<version>G.0</version>
 	<name>Help When Outdoor Servlet Service</name>
 	<description/>
 	<dependencies>
