Updated hwo.pom/pom.xml to 3.1.0 version (G.0)

--- a/help_when_out/hwo.pom/pom.xml
+++ b/help_when_out/hwo.pom/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>new_services.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>F.0</version>
+		<version>G.0</version>
 		<relativePath>../../new_services.pom</relativePath>
 	</parent>
 
